--- a/output.css
+++ b/output.css
@@ -478,6 +478,9 @@
   .h-\[250px\] {
     height: 250px;
   }
+  .h-\[350px\] {
+    height: 350px;
+  }
   .h-\[400px\] {
     height: 400px;
   }
@@ -1547,6 +1550,11 @@
   .md\:h-\[350px\] {
     @media (width >= 48rem) {
       height: 350px;
+    }
+  }
+  .md\:h-\[600px\] {
+    @media (width >= 48rem) {
+      height: 600px;
     }
   }
   .md\:w-auto {
