Ajustes de visibilidade e responsividade.

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
   --font-serif: "Playfair Display", serif;
 
   /* Cores (Colors) */
-  --color-brand-ruby: #A21D20;
+  --color-brand-ruby: #C41E3A;
   --color-brand-dark: #141414;
   --color-brand-gray: #1D1D1D;
   --color-brand-text: #f5f5f5;
